--- a/AdTapsyDemo/.project
+++ b/AdTapsyDemo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AdTapsyDemo</name>
+	<name>AdTapsyDemo_</name>
 	<comment></comment>
 	<projects>
 	</projects>
