--- a/AdTapsyDemo/AndroidManifest.xml
+++ b/AdTapsyDemo/AndroidManifest.xml
@@ -92,6 +92,11 @@
             android:name="com.startapp.android.publish.AppWallActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@android:style/Theme.Translucent" />
+        <!-- Chartboost -->
+        <activity android:name="com.chartboost.sdk.CBImpressionActivity"
+           	android:excludeFromRecents="true" 
+			android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
+			android:configChanges="keyboardHidden|orientation|screenSize"/>
     </application>
 
 </manifest>
